feat：新增图钉affix组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -21,3 +21,4 @@
 @import '../back-top/styles/index.css';
 @import '../badge/styles/index.css';
 @import '../loading/styles/index.css';
+@import '../affix/styles/index.css';
