feat：新增骨架屏组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -24,3 +24,4 @@
 @import '../affix/styles/index.css';
 @import '../progress/styles/index.css';
 @import '../circle/styles/index.css';
+@import '../skeleton/styles/index.css';
