--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -25,3 +25,4 @@
 @import '../progress/styles/index.css';
 @import '../circle/styles/index.css';
 @import '../skeleton/styles/index.css';
+@import '../drawer/styles/index.css';
