feat：增加 notice 通知组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -17,6 +17,7 @@
 @import '../dropdown/styles/index.css';
 @import '../tag/styles/index.css';
 @import '../message/styles/index.css';
+@import '../notice/styles/index.css';
 @import '../alert/styles/index.css';
 @import '../back-top/styles/index.css';
 @import '../badge/styles/index.css';
