--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -31,3 +31,4 @@
 @import '../popover/styles/index.css';
 @import '../modal/styles/index.css';
 @import '../calendar/styles/index.css';
+@import '../tabs/styles/index.css';
