feat：新增desc描述说明组件，更新组件文档

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -33,3 +33,4 @@
 @import '../calendar/styles/index.css';
 @import '../tabs/styles/index.css';
 @import '../timeline/styles/index.css';
+@import '../desc/styles/index.css';
