feat：新增轮播组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -34,3 +34,4 @@
 @import '../tabs/styles/index.css';
 @import '../timeline/styles/index.css';
 @import '../desc/styles/index.css';
+@import '../carousel/styles/index.css';
