--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -38,3 +38,4 @@
 @import '../breadcrumb/styles/index.css';
 @import '../anchor/styles/index.css';
 @import '../steps/styles/index.css';
+@import '../menu/styles/index.css';
