--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -39,3 +39,4 @@
 @import '../anchor/styles/index.css';
 @import '../steps/styles/index.css';
 @import '../menu/styles/index.css';
+@import '../switch/styles/index.css';
