--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -40,3 +40,4 @@
 @import '../steps/styles/index.css';
 @import '../menu/styles/index.css';
 @import '../switch/styles/index.css';
+@import '../rate/styles/index.css';
