feat：完成上传组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -41,3 +41,4 @@
 @import '../menu/styles/index.css';
 @import '../switch/styles/index.css';
 @import '../rate/styles/index.css';
+@import '../upload/styles/index.css';
