feat：新增输入框、数字框、多选、滑块组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -42,3 +42,7 @@
 @import '../switch/styles/index.css';
 @import '../rate/styles/index.css';
 @import '../upload/styles/index.css';
+@import '../input-number/styles/index.css';
+@import '../input/styles/index.css';
+@import '../slider/styles/index.css';
+@import '../checkbox/styles/index.css';
