feat：新增颜色选择器组件

--- a/src/_styles/components.css
+++ b/src/_styles/components.css
@@ -46,3 +46,4 @@
 @import '../input/styles/index.css';
 @import '../slider/styles/index.css';
 @import '../checkbox/styles/index.css';
+@import '../color-picker/styles/index.css';
