--- a/src/_internal/popper/styles/index.css
+++ b/src/_internal/popper/styles/index.css
@@ -1,89 +1,104 @@
 .bin-popper {
-  --b-popper-arrow-width: 8px;
-  --b-popper-arrow-distance: 8px;
-  --b-popper-bg-dark: #303133;
-  --b-popper-bg-light: var(--bin-white-color);
-  --b-popper-shadow-color: rgba(0, 0, 0, 0.07);
-  --b-popper-padding: 8px 14px;
-  --b-popper-border-radius: var(--bin-border-radius-default);
+  --b-popper-padding: var(--bin-popper-padding);
+  --b-popper-tooltip-padding: var(--bin-popper-tooltip-padding);
+  --b-popper-radius: var(--bin-popper-radius);
+  --b-popper-item-height: var(--bin-popper-item-height);
+  --b-popper-item-margin: var(--bin-popper-item-margin);
+  --b-popper-bg-light: var(--bin-popper-bg-light);
+  --b-popper-bg-dark: var(--bin-popper-bg-dark);
 }
 
 .bin-popper {
   position: absolute;
-  border-radius: var(--b-popper-border-radius);
-  padding: var(--b-popper-padding);
+  border-radius: var(--bin-border-radius-default);
+  padding: var(--b-popper-tooltip-padding);
+  z-index: 2000;
   font-size: var(--bin-font-size-default);
   line-height: var(--bin-base-line-height);
   min-width: 10px;
-  z-index: 2000;
   word-wrap: break-word;
   visibility: visible;
+
   &.is-dark {
     color: var(--b-popper-bg-light);
     background: var(--b-popper-bg-dark);
+
     .bin-popper__arrow::before {
       background: var(--b-popper-bg-dark);
       right: 0;
     }
   }
+
   &.is-light {
     background: var(--b-popper-bg-light);
     box-shadow: var(--bin-shadow-popper);
+
     .bin-popper__arrow::before {
-      box-shadow: 3px 3px 7px var(--b-popper-shadow-color);
+      box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.07);
       background: var(--b-popper-bg-light);
       right: 0;
     }
   }
+
   &.is-pure {
     padding: 0;
   }
-  .bin-popper__arrow {
+}
+
+.bin-popper__arrow {
+  position: absolute;
+  width: 8px;
+  height: 8px;
+  z-index: -1;
+
+  &::before {
     position: absolute;
-    width: var(--b-popper-arrow-width);
-    height: var(--b-popper-arrow-width);
+    width: 8px;
+    height: 8px;
     z-index: -1;
-    &::before {
-      position: absolute;
-      width: var(--b-popper-arrow-width);
-      height: var(--b-popper-arrow-width);
-      z-index: -1;
-      content: ' ';
-      transform: rotate(45deg);
-      background: var(--b-popper-bg-dark);
-      box-sizing: border-box;
-    }
+    content: ' ';
+    transform: rotate(45deg);
+    background: var(--b-popper-bg-dark);
+    box-sizing: border-box;
   }
-  &[data-popper-placement^='top'] > .bin-popper__arrow {
-    bottom: -4px;
-  }
-  &[data-popper-placement^='bottom'] > .bin-popper__arrow {
-    top: -4px;
-  }
-  &[data-popper-placement^='left'] > .bin-popper__arrow {
-    right: -4px;
-  }
-  &[data-popper-placement^='right'] > .bin-popper__arrow {
-    left: -4px;
-  }
-  &.is-light[data-popper-placement^='top'] .bin-popper__arrow::before {
-    box-shadow: 3px 3px 7px var(--b-popper-shadow-color);
-    border-top-color: transparent;
-    border-left-color: transparent;
-  }
-  &.is-light[data-popper-placement^='bottom'] .bin-popper__arrow::before {
-    box-shadow: -3px -3px 7px var(--b-popper-shadow-color);
-    border-bottom-color: transparent;
-    border-right-color: transparent;
-  }
-  &.is-light[data-popper-placement^='left'] .bin-popper__arrow::before {
-    box-shadow: 3px -3px 7px var(--b-popper-shadow-color);
-    border-left-color: transparent;
-    border-bottom-color: transparent;
-  }
-  &.is-light[data-popper-placement^='right'] .bin-popper__arrow::before {
-    box-shadow: -3px 3px 7px var(--b-popper-shadow-color);
-    border-right-color: transparent;
-    border-top-color: transparent;
-  }
+}
+
+.bin-popper[data-popper-placement^='top'] > .bin-popper__arrow {
+  bottom: -4px;
+}
+
+.bin-popper[data-popper-placement^='bottom'] > .bin-popper__arrow {
+  top: -4px;
+}
+
+.bin-popper[data-popper-placement^='left'] > .bin-popper__arrow {
+  right: -4px;
+}
+
+.bin-popper[data-popper-placement^='right'] > .bin-popper__arrow {
+  left: -4px;
+}
+
+.bin-popper.is-light[data-popper-placement^='top'] .bin-popper__arrow::before {
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.07);
+  border-top-color: transparent;
+  border-left-color: transparent;
+}
+
+.bin-popper.is-light[data-popper-placement^='bottom'] .bin-popper__arrow::before {
+  box-shadow: -3px -3px 7px rgba(0, 0, 0, 0.07);
+  border-bottom-color: transparent;
+  border-right-color: transparent;
+}
+
+.bin-popper.is-light[data-popper-placement^='left'] .bin-popper__arrow::before {
+  box-shadow: 3px -3px 7px rgba(0, 0, 0, 0.07);
+  border-left-color: transparent;
+  border-bottom-color: transparent;
+}
+
+.bin-popper.is-light[data-popper-placement^='right'] .bin-popper__arrow::before {
+  box-shadow: -3px 3px 7px rgba(0, 0, 0, 0.07);
+  border-right-color: transparent;
+  border-top-color: transparent;
 }
