--- a/demo/.vitepress/theme/doc.css
+++ b/demo/.vitepress/theme/doc.css
@@ -25,7 +25,19 @@
     border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
+    overflow-x: hidden;
   }
+}
+
+.vitepress-demo-preview-preview {
+  th,
+  td {
+    border: none;
+    margin: 0;
+    padding: 0;
+    font-size: inherit;
+  }
+
   ul,
   ol {
     padding-left: 0;
