style：修改折叠面板的头部背景样式

--- a/src/_styles/base/vars.css
+++ b/src/_styles/base/vars.css
@@ -22,7 +22,7 @@
   --bin-text-color-3: #86909c;
   --bin-text-color-4: #c9cdd4;
   /* 填充色 */
-  --bin-fill-color-1: #f7f8fa;
+  --bin-fill-color-1: #fafafa;
   --bin-fill-color-2: #f2f3f5;
   --bin-fill-color-3: #e5e6eb;
   --bin-fill-color-4: #c9cdd4;
